--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,13 +1,15 @@
 ---
 import { ClientRouter } from "astro:transitions";
 import "../styles/global.css";
+import "../styles/blog.css";
 
-interface Props {
-	title?: string;
-}
+// interface Props {
+// 	title?: string;
+// }
 
-const { title } = Astro.props;
-
+const { title } = Astro.props;  // , ...rest 
+// const frontmatter = rest.frontmatter;
+// console.log(frontmatter);
 ---
 <!doctype html>
 <html lang="en">
@@ -16,11 +18,12 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-		<ClientRouter />
+		<title>{ title }</title>
+        <ClientRouter />
 	</head>
 	<body class="bg-gray-900 text-white">
-		<main class="mb-10 max-w-5xl m-auto px-5 py-2">
+        <a href="/" id="btn-back">Regresar</a>
+		<main class="mb-10 max-w-5xl m-auto px-2 py-2">
 			<slot />
 		</main>
 	</body>
